<resources>
    <string name="app_name">VS_jdermelj_AntiTheft</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="toggle_turn_on">Alarm entschärfen</string>
    <string name="toggle_turn_off">Ultimativer Anti-Dieb-Modus an!</string>
    <string name="alarm_activated">Alarm scharf!</string>
    <string name="alarm_deactivated">Alarm entschärft.</string>
    <string name="description">Schalten Sie hier den Alarm ein oder aus.</string>
    <string name="general_settings">Allgmeine Einstellungen</string>
    <string name="title_activity_settings">Generelle Einstellungen</string>
    <string name="sensitivity">Sensitivität</string>
    <string name="timeout">Timeout</string>
    <string name="settings_summary_sens">Wert: $1%</string>
    <string name="settings_summary_time">Wert: $1s</string>
    <string name="settings_unit_sek">s</string>
    <string name="settings_unit_prozent">%</string>
    <string name="sensitivity_set">Stellen Sie hier die Sensitivität ein</string>
    <string name="timeout_set">Wie lange soll es gehen, bis der Alarm losfeuert?</string>
    <string name="notification_title">Achtung</string>
    <string name="notification_text">Stelle den Alarm ab, falls du kein Dieb bist!</string>
</resources>
