<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/ch.ethz.inf.vs.a1.jdermelj.antitheft.vs_jdermelj_antitheft.Settings">

    <ch.ethz.inf.vs.a1.jdermelj.antitheft.vs_jdermelj_antitheft.SeekBarPreference
        android:key="SENSKEY"
        android:title="@string/sensitivity"
        android:dialogTitle="@string/sensitivity_set"
        android:dialogMessage=""
        android:summary="@string/settings_summary_sens"
        android:text="@string/settings_unit_prozent"
        android:persistent="true"
        android:max="100"
        />


    <ch.ethz.inf.vs.a1.jdermelj.antitheft.vs_jdermelj_antitheft.SeekBarPreference
        android:key="TIMEKEY"
        android:title="@string/timeout"
        android:dialogTitle="@string/timeout_set"
        android:dialogMessage=""
        android:summary="@string/settings_summary_time"
        android:text="@string/settings_unit_sek"
        android:persistent="true"
        android:max="100"
        />

</PreferenceScreen>